# HadesVR

./: .gitignore  LICENSE  README.md  README_ES.md
Guide/: burning the bootloader onto the controller boards.md
Hardware/Controllers/3d printable parts/: README.md
Hardware/Controllers/Controller boards/: Component list.xlsx  (+1 more)
Software/Driver/src/samples/driver_HadesVR/: CMakeLists.txt  HandTracking.cpp  HandTracking.h  controllerBindings.hpp  dataHandler.cpp  dataHandler.h  dataHandler.hpp  dataHandler_OffsetStuff.cpp  devices.hpp  driver_HadesVR.vcxproj  driver_HadesVR.vcxproj.filters  driver_main.cpp  settingsAPIKeys.h
Software/Driver/src/samples/driver_HadesVR/include/: DataTransport.hpp  HIDTransport.hpp  HandTracking.h  Matrix3x3.hpp  UARTTransport.hpp  Vector3.hpp  dataHandler.h  devices.hpp  driverlog.h  settingsAPIKeys.h
Software/Driver/src/samples/driver_HadesVR/include/filters/: MadgwickOrientation.h  SimpleKalman.h  V3Kalman.h
Software/Driver/src/samples/driver_HadesVR/lib/: hidapi.lib
Software/Driver/src/samples/driver_HadesVR/lib/x86/release/: PSMoveClient_CAPI.lib  hidapi.lib
Software/Driver/src/samples/driver_HadesVR/src/: HIDTransport.cpp  HandTracking.cpp  UARTTransport.cpp  dataHandler.cpp  dataHandler_Calibration.cpp  dataHandler_IMU.cpp  dataHandler_OffsetStuff.cpp  driver_main.cpp  ringbuffer.c  ringbuffer.h
Software/Driver/src/samples/driver_HadesVR/src/filters/: MadgwickOrientation.cpp  SimpleKalman.cpp  V3Kalman.cpp
docs/: ControllerPinouts.md  Controllers.md  DocsIndex.md  Driver.md  Headset.md  RFReceiver.md  Tracking.md
(+65 files in other folders)
